Added back the 2nd tab, removed static picture.
# 0.00.12 (65717) Jul 10, 2012
7/10/12 Deploying to dev for review and possible interviews prior to turning other (unfinished) tabs on.
Added developer dialog for setting the heat transfer constants.
Fixed some cases where changing the burner back and forth from heating to cooling a number of times could lead to null pointer exceptions.
Fixed an issue where energy chunks coming from the air wouldn't follow the thermal object if it was moved.
# 0.00.11 (65551) Jun 28, 2012
6/28/12 Publishing version to dev with only first tab for use in early interviews.
# 0.00.10 (65547) Jun 28, 2012
6/28/12 Snapshot for review.
Made the triangle of the thermometer change color based on what is being measured.
Adjusted thermometer behavior so that lowest and highest allowed temperatures match up with the lowest and highest tick marks.
Made energy chunks that are coming from the air into a thermal element be on top of the z-order until they reach the target object.
Made the thermometer appear to go inside the beaker, and to measure block temperatures in the beaker if over a block.
Made the clipping region that hides energy chunks behind blocks NOT do so when the block is beneath the beaker.
Changed the energy chunk distribution algorithm to fill up the water more quickly when something is dropped into the beaker.
Tweaked value at which a multi-body system is allowed to exchange energy with the air.
# 0.00.09 (65510) Jun 28, 2012
6/28/12 Deploying snapshot to dev for testing and review.
Made energy chunks exchanged between the liquid in the beaker and blocks immersed in the liquid only use visible chunks.
Changed caption for the speed control from "Normal Speed" to simply "Normal".
Added the "sticky thermometer" feature.
Made the energy chunks in the beaker appear to be behind the blocks when the blocks are placed in the beaker.
# 0.00.08 (65232) Jun 18, 2012